French translation update.
* subversion/po/fr.po: clarify one message.

--- a/subversion/po/fr.po
+++ b/subversion/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: subversion 1.2.0\n"
 "Report-Msgid-Bugs-To: dev@subversion.tigris.org\n"
 "POT-Creation-Date: 2006-08-23 13:50-0500\n"
-"PO-Revision-Date: 2006-08-21 10:42+0200\n"
+"PO-Revision-Date: 2006-08-23 09:11+0200\n"
 "Last-Translator: Subversion Developers <dev@subversion.tigris.org>\n"
 "Language-Team: French <dev@subversion.tigris.org>\n"
 "MIME-Version: 1.0\n"
@@ -7242,9 +7242,7 @@ msgstr "Conflit sur '%s' résolu\n"
 msgid ""
 "\n"
 "Fetching external item into '%s'\n"
-msgstr ""
-"\n"
-"Récupération de la référence externe vers '%s'\n"
+msgstr "\nRécupération de la référence externe dans '%s'\n"
 
 #: svn/notify.c:216
 #, c-format
